--- a/project/modules/lib_dynamic_libs.yaml
+++ b/project/modules/lib_dynamic_libs.yaml
@@ -2,4 +2,5 @@
 Files:
   C++:
     - "$SOURCES_DIR/dynamic_libs/os_functions.cpp"
+    - "$SOURCES_DIR/dynamic_libs/nn_act_functions.cpp"
 Hooks: ~
